Fixing form inputs, adding tooltips

--- a/docs/views/buttons.html
+++ b/docs/views/buttons.html
@@ -1,5 +1,11 @@
 <h1>Buttons Module</h1>
 
+<button class="activate-all-fade">
+    <div class=" active">Button text 1</div>
+    <div class=" hidden">Button text 2 longer</div>
+    <div class=" hidden">Short 3</div>
+</button>
+
 <a ng-repeat="color in ['','primary','secondary','light','dark']" class="button {{color}}">a.{{color}}</a>
 <a href="_" class="button link">a.button.link</a>
 
