--- a/scss/modules/forms/_classes.scss
+++ b/scss/modules/forms/_classes.scss
@@ -3,7 +3,20 @@
 // =============
 
 textarea,
-input:not([type=radio]) {
+input[type="text"],
+input[type="password"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="date"],
+input[type="month"],
+input[type="time"],
+input[type="week"],
+input[type="number"],
+input[type="email"],
+input[type="url"],
+input[type="search"],
+input[type="tel"],
+input[type="color"] {
 	@extend %input;
 
 	&.small { @extend %input-small; }
@@ -16,6 +29,10 @@ input:not([type=radio]) {
 textarea { @extend %textarea; }
 
 select { @extend %select; }
+
+input[type="radio"] { @extend %radio; }
+
+input[type="checkbox"] { @extend %checkbox; }
 
 label { 
     @extend %form-label;
