--- a/scss/modules/buttons/_components.scss
+++ b/scss/modules/buttons/_components.scss
@@ -20,7 +20,7 @@
     }
 
     // Text style
-    @include type-scale($button-type-scale);
+    @include type-scale($button-scale);
     text-align: center;
     text-transform: $button-text-transform;
     text-decoration: none;
@@ -68,6 +68,11 @@
     width: 100%;
     height: 100%;
     // TODO: vertical alignment middle
+}
+
+%button-disabled {
+    opacity: $button-disabled-opacity;
+    cursor: $button-disabled-cursor;
 }
 
 
