--- a/scss/modules/buttons/_module.scss
+++ b/scss/modules/buttons/_module.scss
@@ -9,11 +9,13 @@ $button-margin: 0 0.5rem 0 0 !default;
 $button-padding: 0.5rem 1rem !default;
 $button-border-width: $form-border-width !default;
 // $button-color-light: white !default;
-$button-scale: $form-type-scale !default;
+$button-scale: $form-scale !default;
 $button-text-transform: uppercase !default;
 $button-radius: $form-radius !default;
 $button-transition-duration: 0.3s !default;
 $button-icon-margin: 0.5rem !default;
+$button-disabled-opacity: 0.5 !default;
+$button-disabled-cursor: not-allowed !default;
 
 // Sized Button Settings
 $button-tiny-padding: 0.25rem 0.5rem !default;
