--- a/scss/modules/global/_mixins.scss
+++ b/scss/modules/global/_mixins.scss
@@ -129,18 +129,22 @@
         @if $vertical == top {
             top: 0;
             bottom: inherit;
+            @include experimental(transform, none);
         }
         @else if $vertical == bottom {
             bottom: 0;
             top: inherit;
+            @include experimental(transform, none);
         }
         @else if $vertical == below {
             top: 100%;
             bottom: inherit;
+            @include experimental(transform, none);
         }
         @else if $vertical == above {
             bottom: 100%;
             top: inherit;
+            @include experimental(transform, none);
         }
         @else if $vertical == center {
             top: 50%;
@@ -150,6 +154,7 @@
         @else {
             top: $vertical;
             bottom: inherit;
+            @include experimental(transform, none);
         }
     }
 
@@ -157,36 +162,45 @@
         @if $horizontal == left { 
             left: 0;
             right: inherit;
+            @include experimental(transform, none);
         }
         @else if $horizontal == right {
             right: 0;
             left: inherit;
+            @include experimental(transform, none);
         }
         @else if $horizontal == center {
             left: 50%;
             @include experimental(transform, translateX(-50%));
         }
-        @else { left: $horizontal; }
+        @else {
+            left: $horizontal;
+            @include experimental(transform, none);
+        }
     }
 
     @if $top {
         top: $top;
         bottom: inherit;
+        @include experimental(transform, none);
     }
 
     @if $bottom {
         bottom: $bottom;
         top: inherit;
+        @include experimental(transform, none);
     }
 
     @if $left {
         left: $left;
         right: inherit;
+        @include experimental(transform, none);
     }
 
     @if $right {
         right: $right;
         left: inherit;
+        @include experimental(transform, none);
     }
 }
 
