Added left and right tooltips

--- a/docs/views/labels.html
+++ b/docs/views/labels.html
@@ -14,8 +14,8 @@
 </div>
 
 <h2>Tooltips</h2>
-<div class="field">
-    <a href="#" title="Hover text!" class="tooltip-above-left">Hover over me.</a>
+<div class="field text-center">
+    <a href="#" title="Hover text!" class="tooltip-right text-center">Hover over me.</a>
 </div>
 
 <div class="field"><a href="#">Test <span class="popover-above-left secondary">hover me</span></a></div>
