--- a/scss/modules/grid/_components.scss
+++ b/scss/modules/grid/_components.scss
@@ -26,8 +26,8 @@
 				@include column($i, $gutter: $grid-column-gutter);
 			}
 
-			%columns-gutter#{$suffix} > * {
-				&:last-child {
+			%columns-gutter {
+				> * &:last-child {
 					margin-right: 0;
 				}
 			}
